<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.runicrealms.runicitems</groupId>
    <artifactId>RunicItems</artifactId>
    <version>1.16.5</version>

    <name>RunicItems</name>

    <description>The items plugin for Runic Realms</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <fileOutput>${project.basedir}/../lib</fileOutput>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-files-on-build</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}</directory>
                                    <include>${project.artifactId}-${project.version}.jar</include>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>${fileOutput}\${project.artifactId}-${project.version}.jar
                            </outputFile>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <artifactSet>
                                <includes>
                                    <!-- JDA Dependencies -->
                                    <include>net.dv8tion:JDA</include>
                                    <include>net.sf.trove4j:trove4j</include>
                                    <include>org.apache.commons:commons-collections4</include>
                                    <include>com.squareup.okhttp3:okhttp</include>
                                    <include>org.javassist:javassist</include>
                                    <include>com.google.code.findbugs</include>
                                    <include>org.slf4j:slf4j-api</include>
                                    <include>cglib:cglib-nodep</include>
                                    <include>org.jetbrains:annotations</include>
                                    <include>com.neovisionaries:nv-websocket-client</include>
                                    <include>com.squareup.okio:okio</include>
                                    <include>club.minnced:opus-java</include>
                                    <include>club.minnced:opus-java-api</include>
                                    <include>net.java.dev.jna:jna</include>
                                    <include>club.minnced:opus-java-natives</include>
                                    <include>com.fasterxml.jackson.core:jackson-databind</include>
                                    <include>com.fasterxml.jackson.core:jackson-annotations
                                    </include>
                                    <include>com.fasterxml.jackson.core:jackson-core</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.openjfx</groupId>-->
            <!--                <artifactId>javafx-maven-plugin</artifactId>-->
            <!--                <version>${javafx.maven.plugin.version}</version>-->
            <!--                <configuration>-->
            <!--                    <mainClass>HelloFX</mainClass>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <!-- Spigot Repo -->
        <!--        <repository>-->
        <!--            <id>spigotmc-repo</id>-->
        <!--            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>-->
        <!--        </repository>-->
        <!-- JitPack/Github Repo -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- Paper Repo -->
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <!-- ProtocolLib Repo -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
        </repository>
        <!-- ACF -->
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <!-- JDA -->
        <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>https://jcenter.bintray.com</url>
        </repository>
        <!-- NBTAPI -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <dependencies>
        <!-- MythicMobs -->
        <dependency>
            <groupId>net.elseland.xikage</groupId>
            <artifactId>mythicmobs</artifactId>
            <version>4.12.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/MythicMobs-4.12.0.jar</systemPath>
        </dependency>
        <!-- Paper API -->
        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- ProtocolLib API -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.5.0</version>
        </dependency>
        <!-- RunicCore -->
        <dependency>
            <groupId>com.runicrealms.plugin</groupId>
            <artifactId>RunicCore</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicCore-1.16.5.jar</systemPath>
        </dependency>
        <!-- JDA -->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>4.2.0_229</version>
        </dependency>
        <!-- NBTAPI -->
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>item-nbt-api-plugin</artifactId>
            <version>2.7.1</version>
        </dependency>
        <!-- CraftBukkit -->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>craftbukkit</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/craftbukkit-1.16.5.jar</systemPath>
        </dependency>
        <!-- RunicGuilds -->
        <dependency>
            <groupId>com.runicrealms.runicguilds</groupId>
            <artifactId>RunicGuilds</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicGuilds-1.16.5.jar</systemPath>
        </dependency>
        <!-- RunicBank -->
        <dependency>
            <groupId>com.runicrealms.runicbank</groupId>
            <artifactId>RunicBank</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicBank-1.16.5.jar</systemPath>
        </dependency>
    </dependencies>
</project>